--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
       <div>
         <iframe
-          src="https://grews.appointy.com/v2/go-fit/appointment/list"
+          src="https://grews.appointy.com"
           frameborder="0"
           height="800px"
           width="100%"
