--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
       <div>
         <iframe
-          src="https://dev-booking.appointy.com/@infinity-1"
+          src="https://dev-waqt.appointy.com"
           frameborder="0"
           height="800px"
           width="100%"
