--- a/index.html
+++ b/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iframe Test</title>
-  </head>
-  <body>
-  
-    <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
-      <div>
-        <iframe
-          src="https://dev-booking.appointy.com/@tharun30l"
-          frameborder="0"
-          height="800px"
-          width="100%"
-          loading="lazy" frameborder="0" allowfullscreen="" 
-        ></iframe>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Iframe Test</title>
+  <script>
+    // Function to request storage access
+    function requestStorageAccess() {
+      // Check if the Storage Access API is supported
+      if ('hasStorageAccess' in document) {
+        // Request storage access for the iframe
+        document.hasStorageAccess()
+          .then(hasAccess => {
+            if (!hasAccess) {
+              // If access is not granted, prompt the user for access
+              return document.requestStorageAccess();
+            }
+          })
+          .then(() => {
+            // Access granted, do any further initialization here if needed
+            console.log('Storage access granted');
+          })
+          .catch(error => {
+            // Handle errors
+            console.error('Storage access error:', error);
+          });
+      } else {
+        console.warn('Storage Access API is not supported');
+      }
+    }
+  </script>
+</head>
+<body onload="requestStorageAccess()">
+  <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
+    <div>
+      <iframe
+        src="https://dev-booking.appointy.com/@tharun30l"
+        frameborder="0"
+        height="800px"
+        width="100%"
+        loading="lazy" frameborder="0" allowfullscreen=""
+      ></iframe>
     </div>
-  </body>
+  </div>
+</body>
 </html>
