--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
   <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
     <div>
       <iframe
+        sandbox="allow-storage-access-by-user-activation
+                 allow-scripts
+                 allow-same-origin"
         src="https://dev-booking.appointy.com/@tharun30l"
         frameborder="0"
         height="800px"
         width="100%"
         loading="lazy"
-        allow="storage"
-        sandbox="allow-storage"
       ></iframe>
     </div>
   </div>
