--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
       <div>
         <iframe
-          src="https://www.instagram.com"
+          src="https://www.instagram.com/p/C0FDV_SPNFr1RYYW6JEdCKnWLYoqnD-cfXWz0w0/embed"
           frameborder="0"
           height="800px"
           width="100%"
