--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ function rSA() {
         sandbox="allow-storage-access-by-user-activation
                  allow-scripts
                  allow-same-origin"
-        src="https://dev-booking.appointy.com/@tharun30l"
+        src="https://storage-access-api-demo-site-b.glitch.me"
         frameborder="0"
         height="800px"
         width="100%"
