--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ function rSA() {
         sandbox="allow-storage-access-by-user-activation
                  allow-scripts
                  allow-same-origin"
-        src="https://dev-booking.appointy.com/@infinity-1"
+        src="https://cricbuzz.com"
         frameborder="0"
         height="800px"
         width="100%"
