--- a/index.html
+++ b/index.html
@@ -6,63 +6,170 @@
   <title>Iframe Test</title>
   <script>
     // Function to request storage access
-    function requestStorageAccess() {
-      // Check if the Storage Access API is supported
-      // if ('hasStorageAccess' in document) {
-      //   // Request storage access for the iframe
-      //   document.hasStorageAccess()
-      //     .then(hasAccess => {
-      //       if (hasAccess) {
-      //         // If access is not granted, prompt the user for access
-      //         return document.requestStorageAccess();
-      //       }
-      //     })
-      //     .then(() => {
-      //       // Access granted, do any further initialization here if needed
-      //       console.log('Storage access granted');
-      //     })
-      //     .catch(error => {
-      //       // Handle errors
-      //       console.error('Storage access error:', error);
-      //     });
-      // } else {
-      //   console.warn('Storage Access API is not supported');
-      // }
+//     function requestStorageAccess() {
+//       // Check if the Storage Access API is supported
+//       // if ('hasStorageAccess' in document) {
+//       //   // Request storage access for the iframe
+//       //   document.hasStorageAccess()
+//       //     .then(hasAccess => {
+//       //       if (hasAccess) {
+//       //         // If access is not granted, prompt the user for access
+//       //         return document.requestStorageAccess();
+//       //       }
+//       //     })
+//       //     .then(() => {
+//       //       // Access granted, do any further initialization here if needed
+//       //       console.log('Storage access granted');
+//       //     })
+//       //     .catch(error => {
+//       //       // Handle errors
+//       //       console.error('Storage access error:', error);
+//       //     });
+//       // } else {
+//       //   console.warn('Storage Access API is not supported');
+//       // }
 
-    navigator.permissions.query({name: 'storage-access'}).then(res => {
-  if (res.state === 'granted') {
-    // Permission has already been granted
-    // You can request storage access without any user gesture
-    rSA();
-  } else if (res.state === 'prompt') {
-    // Requesting storage access requires user gesture
-    // For example, clicking a button
-    const btn = document.createElement("button");
-    btn.textContent = "Grant access";
-    btn.addEventListener('click', () => {
-      // Request storage access
-      rSA();
-    });
-    document.body.appendChild(btn);
-  }
-});
+//     navigator.permissions.query({name: 'storage-access'}).then(res => {
+//   if (res.state === 'granted') {
+//     // Permission has already been granted
+//     // You can request storage access without any user gesture
+//     rSA();
+//   } else if (res.state === 'prompt') {
+//     // Requesting storage access requires user gesture
+//     // For example, clicking a button
+//     const btn = document.createElement("button");
+//     btn.textContent = "Grant access";
+//     btn.addEventListener('click', () => {
+//       // Request storage access
+//       rSA();
+//     });
+//     document.body.appendChild(btn);
+//   }
+// });
 
-function rSA() {
-  if ('requestStorageAccess' in document) {
-    document.requestStorageAccess().then(
-      (res) => {
-        // Use storage access
-      },
-      (err) => {
-        // Handle errors
-      }
-    );
-  }
+// function rSA() {
+//   if ('requestStorageAccess' in document) {
+//     document.requestStorageAccess().then(
+//       (res) => {
+//         // Use storage access
+//       },
+//       (err) => {
+//         // Handle errors
+//       }
+//     );
+//   }
+// }
+//     }
+
+    // Set a hasAccess boolean variable which defaults to false
+let hasAccess = false;
+
+const cookiesText = document.querySelector("#cookies");
+const errorText = document.querySelector("#error");
+
+const refreshCookiesButton = document.querySelector("#refresh-cookies");
+if (refreshCookiesButton)
+  refreshCookiesButton.addEventListener("click", refreshCookies);
+
+function updateCookiesOutput() {
+  console.log("Read the document cookies:", document.cookie);
+  cookiesText.innerText = document.cookie || "No cookies found";
 }
+
+// This function is called by the refreshCookiesButton
+// It either already has access - in which case it can simply access the cookies
+// Or it doesn't have access because it was waiting for a prompt
+async function refreshCookies() {
+  if (!hasAccess) {
+    console.log(
+      "Don't have access. Trying again within this click handler, in case it needed a prompt."
+    );
+    try {
+      // This should now work if it was waiting a prompt
+      await document.requestStorageAccess();
+      hasAccess = true;  // Can assume this was true is above did not reject
+      console.log("Have access now thanks to prompt");
+      errorText.innerText = "";
+    } catch (err) {
+      console.log("requestStorageAccess Error:", err);
+      errorText.innerText =
+        "Permission denied. Either blocked by user or browser";
     }
+
+    hasAccess = await document.hasStorageAccess();
+    console.log("Updated hasAccess:", hasAccess);
+  }
+  updateCookiesOutput();
+}
+
+async function hasCookieAccess() {
+  // Check if Storage Access API is supported
+  if (!document.requestStorageAccess) {
+    // Storage Access API is not supported so best we can do is
+    // hope it's an older browser that doesn't block 3P cookies
+    console.log("Storage Acccess API not supported. Assume we have access.")
+    return true;
+  }
+
+  // Check if access has already been granted
+  if (await document.hasStorageAccess()) {
+    console.log("Cookie access already granted");
+    return true;
+  }
+
+  // Check the storage-access permission
+  try {
+    const permission = await navigator.permissions.query({
+      name: "storage-access",
+    });
+    console.log("permissions:", permission);
+
+    if (permission.state === "granted") {         
+        // Can just call requestStorageAccess() without a
+        // user interaction and it will resolve automatically.
+        try {
+          console.log("Cookie access allowed. Calling requestStorageAccess()");
+          await document.requestStorageAccess();
+          console.log("Cookie access granted");
+          return true;
+        } catch (error) {
+          // This shouldn't really fail if access is granted
+          return false;
+        }
+      return true;
+    } else if (permission.state === "prompt") {
+        //If the permission status is "prompt" we need to call 
+        //document.requestStorageAccess() from within a user gesture, such as a button click.
+        //we will call this from refresh Cookie button
+      console.log("Cookie access requires a prompt");
+      return false;
+    } else if (permission.state === "denied") {
+       console.log("Cookie access denied");
+      return false;
+    }
+  } catch (error) {
+    // storage-access permission not supported. Assume false.
+      console.log("storage-access permission not supported. Assume no access.");
+    return false;
+  }
+
+  // By default return false, though should really be caught by one of above.
+  return false;
+}
+
+// This function runs as page loads to try to give access initially
+// This can make the click handler quicker as it doesn't need to
+// await the access request if it's already happened.
+async function handleCookieAccessInit() {
+  hasAccess = await hasCookieAccess();
+
+  updateCookiesOutput();
+}
+
+handleCookieAccessInit();
   </script>
 </head>
-<body onload="requestStorageAccess()">
+<body onload="handleCookieAccessInit()">
   <div style="height: 100vh;width: 96%;margin: 20px;box-sizing: border-box;">
     <div>
       <iframe
